similar-insights-semantic/main/default/objects/MedicalInsight/fields/Intent_Classification__c.field-meta.xml
<CustomField>
    <fullName>Intent_Classification__c</fullName>
    <description>Semantic intent category produced by the Similar Insights: Semantic Matching classifier. Used to match insights on what the HCP is asking rather than only on assigned subjects.</description>
    <label>Intent Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trial Access Barrier</fullName>
            </value>
            <value>
                <fullName>Patient Education Gap</fullName>
            </value>
            <value>
                <fullName>Off-Label Information Request</fullName>
            </value>
            <value>
                <fullName>Safety Signal</fullName>
            </value>
            <value>
                <fullName>Efficacy Question</fullName>
            </value>
            <value>
                <fullName>Dosing or Administration</fullName>
            </value>
            <value>
                <fullName>Reimbursement or Access</fullName>
            </value>
            <value>
                <fullName>Competitive or Comparative</fullName>
            </value>
            <value>
                <fullName>Guideline or Protocol</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>