similar-insights-semantic/main/default/objects/MedicalInsight/fields/Intent_Classified_At__c.field-meta.xml
<CustomField>
    <fullName>Intent_Classified_At__c</fullName>
    <description>When Intent_Classification__c was last set by the classifier. Used to skip already-classified records.</description>
    <label>Intent Classified At</label>
    <type>DateTime</type>
</CustomField>