similar-insights-semantic/main/default/objects/MedicalInsight/fields/Intent_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Intent_Confidence__c</fullName>
    <description>Classifier confidence in the assigned intent (0.00 - 1.00).</description>
    <label>Intent Confidence</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>