similar-insights-semantic/main/default/objects/MedicalInsight/fields/Intent_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Intent_Rationale__c</fullName>
    <description>One-sentence explanation of why the classifier chose this intent. Shown to users to build trust in semantic matches.</description>
    <label>Intent Rationale</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>