similar-insights-semantic/main/default/objects/MedicalInsight/fields/Intent_Subtopics__c.field-meta.xml
<CustomField>
    <fullName>Intent_Subtopics__c</fullName>
    <description>Comma-separated list of fine-grained sub-topics the classifier extracted within the chosen intent. Used for tight semantic matching — two insights are considered similar when they share the same intent AND overlap on sub-topics.</description>
    <label>Intent Subtopics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>